added loading spinner, and nav title

--- a/src/template.html
+++ b/src/template.html
@@ -9,6 +9,7 @@
     <meta name="apple-mobile-web-app-title" content="Weather App">
 </head>
 <body>
+    <nav><h1>Weather</h1></nav>
     <form>
     <label for="location-input"></label>
         <input type="search" id="location-input" aria-label="Search Location" placeholder="Search location..." required>
@@ -17,5 +18,6 @@
     <div id="container">
         <div id="weather-info"></div>
     </div>
+       <div id="loading-spinner" class="spinner hidden"></div>
 </body>
 </html>
